--- a/index.html
+++ b/index.html
@@ -15,8 +15,37 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello</h1>
-      <a href="" class="btn btn-primary">Click Me</a>
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 5:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="clear"
+            />
+            12° F | C
+          </div>
+          <div class="col 6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/masonmol/Vanilla-Weather-App.git"
+          target="blank"
+          >Open-source code
+        </a>
+        by Morgan Mason
+      </small>
     </div>
 
     <script src="src/app.js"></script>
