--- a/index.html
+++ b/index.html
@@ -23,37 +23,45 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 5:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="clear"
-            />
-            12° C | F
-          </div>
-          <div class="col 6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>New York</h1>
             <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 73%</li>
-              <li>Wind: 2 km/h</li>
+              <li>Friday 5:00</li>
+              <li>Clear</li>
             </ul>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="clear"
+                  class="float-left"
+                />
+                <strong>12</strong>
+                <span class="units">°C | <a href="#">°F</a></span>
+              </div>
+            </div>
+            <div class="col 6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 73%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/masonmol/Vanilla-Weather-App.git"
+            target="blank"
+            >Open-source code
+          </a>
+          by Morgan Mason
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/masonmol/Vanilla-Weather-App.git"
-          target="blank"
-          >Open-source code
-        </a>
-        by Morgan Mason
-      </small>
     </div>
 
     <script src="src/app.js"></script>
