Updated time and data

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
           <div class="overview">
             <h1 class="city">New York</h1>
             <ul>
-              <li>Friday 5:00</li>
+              <li class="date">Friday</li>
+              <li class="time">5:00</li>
               <li class="conditions">Clear</li>
             </ul>
           </div>
