Added relevant icons from API

--- a/index.html
+++ b/index.html
@@ -28,21 +28,17 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1 class="city">New York</h1>
+            <h1 class="city"></h1>
             <ul>
-              <li class="date">Friday</li>
-              <li class="time">5:00</li>
-              <li class="conditions">Clear</li>
+              <li class="date"></li>
+              <li class="time"></li>
+              <li class="conditions"></li>
             </ul>
           </div>
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                  alt="clear"
-                  class="float-left"
-                />
+                <img src="" alt="clear" id="icon" class="float-left" />
                 <strong class="temperature">12</strong>
                 <span class="units">°C | <a href="#">°F</a></span>
               </div>
