add class to elements re: temperature units

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
               <div class="clearfix weather-temperature">
                 <img src="" alt="clear" id="icon" class="float-left" />
                 <strong class="temperature">12</strong>
-                <span class="units">°C | <a href="#">°F</a></span>
+                <span class="units"
+                  ><a href="#" class="celcius-link">°C</a> |
+                  <a href="#" class="fahrenheit-link">°F</a></span
+                >
               </div>
             </div>
 
