--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img src="" alt="clear" id="icon" class="float-left" />
                 <strong class="temperature">12</strong>
                 <span class="units"
-                  ><a href="#" class="celcius-link">°C</a> |
+                  ><a href="#" class="celsius-link active">°C</a> |
                   <a href="#" class="fahrenheit-link">°F</a></span
                 >
               </div>
