--- a/index.html
+++ b/index.html
@@ -81,8 +81,25 @@
               </ul>
             </div>
           </div>
+          <hr />
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="forecast-date">Thu</div>
+                <img
+                  src="http://openweathermap.org/img/wn/01d@2x.png"
+                  alt=""
+                  width="44px"
+                />
+                <div class="forecast-temp">
+                  <span class="forecast-temp-max">18</span>°
+                  <span class="forecast-temp-min">12</span>°
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <small>
+        <small class="footer">
           <a
             href="https://github.com/masonmol/Vanilla-Weather-App.git"
             target="blank"
