--- a/index.html
+++ b/index.html
@@ -82,22 +82,7 @@
             </div>
           </div>
           <hr />
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="forecast-date">Thu</div>
-                <img
-                  src="http://openweathermap.org/img/wn/01d@2x.png"
-                  alt=""
-                  width="44px"
-                />
-                <div class="forecast-temp">
-                  <span class="forecast-temp-max">18</span>°
-                  <span class="forecast-temp-min">12</span>°
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
         <small class="footer">
           <a
