Delete metric units

--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
               <div class="clearfix weather-temperature">
                 <img src="" alt="clear" id="icon" class="float-left" />
                 <strong class="temperature">12</strong>
-                <span class="units"
-                  ><a href="#" class="celsius-link active">°C</a> |
-                  <a href="#" class="fahrenheit-link">°F</a></span
-                >
+                <span class="units"> °F</span>
               </div>
             </div>
             <div class="col 4">
@@ -76,7 +73,7 @@
             <div class="col 3">
               <ul>
                 <li>Humidity: <span class="humidity">73</span>%</li>
-                <li>Wind: <span class="wind">2</span> km/h</li>
+                <li>Wind: <span class="wind">2</span> mph</li>
                 <li>Feels Like: <span class="feels-like-temp">22</span>°</li>
               </ul>
             </div>
