Updated footer with website link

--- a/index.html
+++ b/index.html
@@ -86,14 +86,20 @@
           <hr />
           <div class="weather-forecast" id="forecast"></div>
         </div>
-        <small class="footer">
+        <footer class="footer center">
+          This website was coded by
+          <a
+            href="https://infallible-bhaskara-573893.netlify.app/"
+            target="blank"
+            >Morgan Mason</a
+          >
+          and open-sourced on
           <a
             href="https://github.com/masonmol/Vanilla-Weather-App.git"
             target="blank"
-            >Open-source code
-          </a>
-          by Morgan Mason
-        </small>
+            >GitHub</a
+          >
+        </footer>
       </div>
     </div>
 
